--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@
 #Sun May 08 00:30:04 PDT 2022
 android.nonTransitiveRClass=true
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding\=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
